--- a/pages/Vichy/index/index.wxml
+++ b/pages/Vichy/index/index.wxml
@@ -1,9 +1,9 @@
 <!--pages/Vichy/index/index.wxml-->
-<swiper vertical='true' current='{{currentIndex}}'>
-  <swiper-item class="item" wx:for='{{index_banner}}' wx:key='index'>
-    <image src="{{item}}" class="bannerImg" lazy-load='true'/>
+<swiper vertical='true' current='{{currentIndex}}' easing-function='default'>
+  <swiper-item class="item" wx:for='{{isXModel ? index_banner_X : index_banner}}' wx:key='index'>
+    <image src="{{item}}"  class="bannerImg" lazy-load='true'/>
     <view class="btnBox">
-       <view class="btn">免费申领</view>
+       <view class="btn" bindtap="jumpToFreeReceive" style="margin-bottom:{{index === index_banner.length-1 ? '50rpx' : 0}}">免费申领</view>
        <view class="chevronBox" wx:if='{{index !== index_banner.length-1}}' bindtap="nextBanner" data-index="{{index}}">
           <div class="chevron"></div>
           <div class="chevron"></div>
