--- a/pages/Vichy/index/index.wxss
+++ b/pages/Vichy/index/index.wxss
@@ -2,6 +2,7 @@
 page{
   width: 100%;
   height: 100%;
+  background-image: none;
 }
 swiper{
   width: 100%;
@@ -23,7 +24,7 @@ swiper{
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 100rpx;
+  bottom: 0;
   margin: 0 auto;
   z-index: 10;
   display: flex;
@@ -40,14 +41,16 @@ swiper{
   line-height:90rpx;
   text-align: center;
   background: #1472B3;
-  margin: 0 auto;
+  margin: 0 auto 50rpx;
 }
 /* -------------------------------------指引箭头 */
 .chevronBox {
     position: relative;
-    width: 50rpx;
-    height: 50rpx;
+    width: 40rpx;
+    height: 40rpx;
     margin: 10rpx auto 0;
+    padding: 0 50rpx 50rpx;
+    
 }
 .chevron {
     position: absolute;
