--- a/pages/Vichy/informationWord/informationWord.wxml
+++ b/pages/Vichy/informationWord/informationWord.wxml
@@ -55,6 +55,6 @@
       </view>
    </view>
    <view class="submitBox">
-     <view class="submit">提交</view>
+     <view class="submit" bindtap="submit">提交</view>
    </view>
 </view>
