--- a/pages/Vichy/exchangeCode/exchangeCode.wxss
+++ b/pages/Vichy/exchangeCode/exchangeCode.wxss
@@ -1,4 +1,4 @@
-/* pages/Vichy/checkSale/checkSale.wxss */
+/* pages/Vichy/exchangeCode/exchangeCode.wxss */
 page{
   background-image: url('https://img.cdn.powerpower.net/5da96ab7e4b0551951d0c4e7.png');
   background-size: 100% 100%;
@@ -36,11 +36,11 @@ page{
 }
 .convertibleBox{
   width: 500rpx;
-  min-height: 330rpx;
+  min-height: 305rpx;
   background:linear-gradient(180deg,rgba(245,251,255,1) 0%,rgba(251,252,254,1) 100%);
   padding: 36rpx 30rpx;
   box-sizing: border-box;
-  margin: 0 auto
+  margin: 0 auto 60rpx;
 }
 .convertibleBox2{
   width: 500rpx;
@@ -70,39 +70,24 @@ page{
   font-family:PingFangSC-Light,PingFangSC;
   font-weight:300;
   color:rgba(20,20,20,1);
-  line-height:37rpx;
+  line-height:45rpx;
   text-align: center
 }
-.convertible_btn{
-  width: 100%;
-  font-size:30rpx;
-  font-family:PingFangSC-Medium,PingFangSC;
-  font-weight:500;
-  color:rgba(51,51,51,1);
-  line-height:80rpx;
+.codeBox{
   text-align: center;
-  border:3rpx solid rgba(51,51,51,1);
-  background: #fff;
-  margin-top: 40rpx;
-}
-.scanCode{
-  width:510rpx;
-  height:80rpx;
-  background:rgba(255,255,255,1);
-  border:3rpx solid rgba(51,51,51,1);
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  margin: 114rpx auto 120rpx
 }
-.scanImg{
-  font-size: 40rpx;
-  margin-right: 27rpx;
+.codeImg{
+  width: 270rpx;
+  height: 270rpx;
+  margin-bottom: 40rpx;
 }
 .scanCont{
-  font-size:30rpx;
+  font-size:28rpx;
   font-family:PingFangSC-Medium,PingFangSC;
   font-weight:500;
   color:rgba(51,51,51,1);
-  line-height:32rpx;
+  line-height:28rpx;
 }
