--- a/pages/Vichy/informationWord/informationWord.wxml
+++ b/pages/Vichy/informationWord/informationWord.wxml
@@ -2,7 +2,8 @@
 <view class="informationBox animated fadeIn">
    <text class="information_title">手机号授权</text>
    <view class="information_tip"><text class="needTig">*</text>兑换时的唯一凭证</view>
-   <view class="information_phone">
+   <view class="information_HasPhone animated fadeIn" wx:if='{{activeData.cell_phone}}'>{{activeData.cell_phone}}</view>
+   <view class="information_phone" wx:else>
       微信手机号授权
       <button open-type="getPhoneNumber" bindgetphonenumber='getPhoneNumber' class="phoneBtn"></button>
    </view>
@@ -15,27 +16,23 @@
             <text class="iconlujing-1 iconfont dirIcon"></text>
          </view>
       </picker>
-      <picker mode = 'selector' bindchange="bindPickerChange_store" value="{{store_index}}" range="{{storeLoaction}}">
-         <view class="storeChooseBoxRight" animation="{{animationData}}">
-            <text class="animated fadeIn" wx:for='{{storeLoaction}}' wx:key='index' wx:if='{{store_index == index}}'>{{storeLoaction[store_index]}}</text>
+      <picker mode = 'selector' bindchange="bindPickerChange_store" value="{{store_index}}" range='{{storeLoaction}}' range-key="{{'name'}}">
+         <view class="storeChooseBoxRight">
+            <text class="animated fadeIn" wx:for='{{storeLoaction}}' wx:key='index' wx:if='{{store_index == index}}'>{{storeLoaction[store_index].name}}</text>
             <text class="iconlujing-1 iconfont dirIcon"></text>
          </view>
       </picker>
    </view>
    <view class="store_tip">
       <text class="icondingwei iconfont icon"></text>
-      <text class="storeDetail">上海市黄浦京西路139号（距您13km）</text>
+      <text class="storeDetail">{{storeLoaction[store_index].address}}（距您13km）</text>
    </view>
-   <!-- <view class="store_tip">
-      <text class="iconshijian iconfont icon2"></text>
-      <text class="storeDetail">领取日期：2019-10-11至2019-10-14</text>
-   </view> -->
 
    <text class="information_title">确认领取日期</text>
    <view class="storeChooseBox">
-      <picker mode = 'date' style="width:100%" bindchange="bindDateChange" value="{{date}}" start="2019-10-01" end="2019-10-04">
+      <picker mode = 'selector' style="width:100%" bindchange="bindDateChange" value="{{data_index}}" range='{{dataList}}'>
          <view class="timeChooseBoxLeft">
-            <text class="animated fadeIn">{{date}}</text>
+            <text class="animated fadeIn">{{dataList[data_index]}}</text>
             <text class="iconlujing-1 iconfont dirIcon"></text>
          </view>
       </picker>
