--- a/pages/Vichy/index/index.wxml
+++ b/pages/Vichy/index/index.wxml
@@ -2,7 +2,7 @@
 <swiper vertical='true' current='{{currentIndex}}' easing-function='default'>
   <swiper-item class="item" wx:for='{{isXModel ? index_banner_X : index_banner}}' wx:key='index'>
     <image src="{{item}}"  class="bannerImg" lazy-load='true'/>
-    <view class="btnBox">
+    <view class="btnBox" wx:if='{{isShowApplyBtn}}'>
        <view class="btn" bindtap="jumpToFreeReceive" style="margin-bottom:{{index === index_banner.length-1 ? '50rpx' : 0}}">免费申领</view>
        <view class="chevronBox" wx:if='{{index !== index_banner.length-1}}' bindtap="nextBanner" data-index="{{index}}">
           <div class="chevron"></div>
@@ -12,3 +12,5 @@
     </view>
   </swiper-item>
 </swiper>
+
+<jurisdictionSmallPopup state='{{jurisdictionSmallState}}' bindmyevent='bindgetuserinfo'></jurisdictionSmallPopup>
