--- a/pages/Vichy/exchangeCode/exchangeCode.wxml
+++ b/pages/Vichy/exchangeCode/exchangeCode.wxml
@@ -1,22 +1,22 @@
 <!--pages/Vichy/exchangeCode/exchangeCode.wxml-->
-<view class="checkSaleBox">
-   <image class="headImg" src="https://wx.qlogo.cn/mmopen/vi_32/RC66AgmvL5B7onSJJskOcg2hYHr8dd3fI2kPXg7r6EP5CcgOgqvvcd5XmK8u3nJxRNib9LK8vEt4GvMhiaojvtAA/132"></image>
+<view class="checkSaleBox animated fadeIn">
+   <image class="headImg animated fadeIn" wx:if='{{giftReceiveInfo.head_img}}' src="{{giftReceiveInfo.head_img}}"></image>
    <view class="currentInvitation">目前累积邀请 
-       <text class="currentInvitationNum">2</text> 人
+       <text class="currentInvitationNum">{{giftReceiveInfo.share_member_count || 0}}</text> 人
    </view>
-   <!-- 扫完后 -->
-   <view class="convertibleBox">
+   <!-- 可兑换 -->
+   <view class="convertibleBox animated fadeIn" wx:if='{{giftReceiveInfo.items.length>0}}'>
        <view class="convertible_title">可兑换</view>
-       <view class="convertible_cont" wx:for='{{3}}'>薇姿眼霜*3</view>
+       <view class="convertible_cont" wx:for='{{giftReceiveInfo.items}}' wx:key='index'>{{item.name}}*{{item.count}}</view>
+   </view>
+   <!-- 无兑换 -->
+   <view class="convertibleBox animated fadeIn" wx:elif='{{!giftReceiveInfo.items && isSureReceiveInfoComplate}}'>
+       <view class="convertible_title">暂无可兑换</view>
+       <view class="backHome" bindtap="backHome">申领</view>
    </view>
 
-   <!-- 扫前 -->
-   <!-- <view class="convertibleBox2">
-      请扫描用户二维码获得兑换信息
-   </view> -->
-
-   <view class="codeBox">
-       <image class="codeImg" src="https://img.cdn.powerpower.net/5da3f1a4e4b0697c15ae69fd.png"></image>
+   <view class="codeBox animated fadeIn" wx:if='{{giftReceiveInfo.qr_url}}'>
+       <image class="codeImg" src="{{giftReceiveInfo.qr_url}}"></image>
        <text class="scanCont">请向工作人员出示此二维码完成兑换
 </text>
    </view>
