--- a/pages/Vichy/index/index.wxss
+++ b/pages/Vichy/index/index.wxss
@@ -3,15 +3,17 @@ page{
   width: 100%;
   height: 100%;
   background-image: none;
+  position: relative;
 }
 swiper{
   width: 100%;
   height: 100%;
+  /* position: relative; */
 }
 .item{
   width: 100%;
   height: 100%;
-  position: relative;
+  /* position: relative; */
 }
 .bannerImg{
   position: absolute;
@@ -21,7 +23,7 @@ swiper{
 }
 .btnBox{
   width: 100%;
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   bottom: 0;
@@ -42,6 +44,7 @@ swiper{
   text-align: center;
   background: #1472B3;
   margin: 0 auto 50rpx;
+  position: relative;
 }
 /* -------------------------------------指引箭头 */
 .chevronBox {
@@ -106,3 +109,11 @@ swiper{
         opacity: 1;
     }
 } */
+.getUserInfoBtn{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
