--- a/pages/Vichy/ruleDetail/ruleDetail.wxml
+++ b/pages/Vichy/ruleDetail/ruleDetail.wxml
@@ -2,10 +2,12 @@
 <view class="ruleDetailBox">
    <view class="ruleTitle">活动规则</view>
    <view class="ruleConBox">
-      <text class="point"></text>
-      <view class="ruleCon">1.本次活动由Justin&Julie Fitness与Vichy薇姿联合举办，礼品数量共计50000份！</view>
+      <!-- <text class="point"></text> -->
+      <!-- <view class="ruleCon">1.本次活动由Justin&Julie Fitness与Vichy薇姿联合举办，礼品数量共计50000份！</view> -->
+      <!-- <rich-text class="ruleCon" nodes='{{activeData.rule}}'></rich-text> -->
+      <rich-text class="ruleCon" nodes='<p style="margin-bottom:5px">1.每人限限定指定日期领取限定指定日期领取限定指定日期领取限定指定日期领取领指定份数</p><p style="margin-bottom:5px">2.限定指定日期限定指定日期领取限定指定日期领取领取</p>'></rich-text>
    </view>
-   <view class="ruleConBox">
+   <!-- <view class="ruleConBox">
       <text class="point"></text>
       <view class="ruleCon">2.每份Vichy薇姿礼包含有薇姿89精华1.5ml*1；薇姿89眼霜1ml*1；薇姿温泉矿物系列水活霜1.5ml*3。</view>
    </view>
@@ -24,7 +26,7 @@
    <view class="ruleConBox">
       <text class="point"></text>
       <view class="ruleCon">6.每位用户活动期间仅一次申领机会，不可重复申领！</view>
-   </view>
+   </view> -->
 
    <view class="logo">
       <image src="https://img.cdn.powerpower.net/5da9236fe4b0551951d0c100.png" class="logoImg"></image>
