--- a/pages/Vichy/checkSale/checkSale.wxml
+++ b/pages/Vichy/checkSale/checkSale.wxml
@@ -1,22 +1,23 @@
 <!--pages/Vichy/checkSale/checkSale.wxml-->
 <view class="checkSaleBox">
-   <image class="headImg" src="https://wx.qlogo.cn/mmopen/vi_32/RC66AgmvL5B7onSJJskOcg2hYHr8dd3fI2kPXg7r6EP5CcgOgqvvcd5XmK8u3nJxRNib9LK8vEt4GvMhiaojvtAA/132"></image>
-   <view class="currentInvitation">目前累积邀请 
-       <text class="currentInvitationNum">2</text> 人
-   </view>
    <!-- 扫完后 -->
-   <view class="convertibleBox">
-       <view class="convertible_title">可兑换</view>
-       <view class="convertible_cont" wx:for='{{3}}'>薇姿眼霜*3</view>
-       <view class="convertible_btn">确认兑换</view>
+   <image class="headImg animated fadeIn" wx:if='{{currentGiftReceiveInfo.head_img}}' src="{{currentGiftReceiveInfo.head_img}}"></image>
+   <view class="currentInvitation animated fadeIn" wx:if='{{currentGiftReceiveInfo}}'>目前累积邀请 
+       <text class="currentInvitationNum">{{currentGiftReceiveInfo.share_member_count}}</text> 人
    </view>
+   <view class="convertibleBox animated fadeIn" wx:if='{{currentGiftReceiveInfo}}'>
+       <view class="convertible_title">{{currentGiftReceiveInfo.items.length > 0 ? '可兑换': '暂无可兑换'}}</view>
+       <view class="convertible_cont" wx:for='{{currentGiftReceiveInfo.items}}' wx:key='index'>{{item.name}}*{{item.count}}</view>
+       <view class="convertible_btn animated fadeIn" bindtap="sureExchange" wx:if='{{currentGiftReceiveInfo.items.length > 0 && currentGiftReceiveInfo.receive_flag == 0}}'>确认兑换</view>
+       <view class="convertible_overdueBtn animated fadeIn" wx:if='{{currentGiftReceiveInfo.receive_flag == 1}}'>用户已兑换</view>
+  </view>
 
-   <!-- 扫前 -->
-   <!-- <view class="convertibleBox2">
+    <!-- 扫前 -->
+    <view class="convertibleBox2" wx:if='{{!currentGiftReceiveInfo}}'>
       请扫描用户二维码获得兑换信息
-   </view> -->
+    </view>
 
-   <view class="scanCode">
+   <view class="scanCode animated fadeIn" bindtap="showScanCode">
        <text class="iconfont iconicon-test13 scanImg"></text>
        <text class="scanCont">扫一扫</text>
    </view>
