--- a/pages/Vichy/checkSale/checkSale.wxss
+++ b/pages/Vichy/checkSale/checkSale.wxss
@@ -15,7 +15,8 @@ page{
   text-align: center;
   padding-bottom: 46rpx;
   box-sizing: border-box;
-  margin: 100rpx auto 45rpx
+  margin: 100rpx auto 45rpx;
+  display: table;
 }
 .headImg{
   width: 128rpx;
@@ -54,7 +55,7 @@ page{
   font-weight:300;
   color:rgba(20,20,20,1);
   line-height:42rpx;
-  margin: 0 auto
+  margin: 100rpx auto 0
 }
 .convertible_title{
   font-size:34rpx;
@@ -83,6 +84,18 @@ page{
   text-align: center;
   border:3rpx solid rgba(51,51,51,1);
   background: #fff;
+  margin-top: 40rpx;
+}
+.convertible_overdueBtn{
+  width: 100%;
+  font-size:30rpx;
+  font-family:PingFangSC-Medium,PingFangSC;
+  font-weight:500;
+  color:#fff;
+  line-height:80rpx;
+  text-align: center;
+  /* border:3rpx solid rgba(51,51,51,1); */
+  background: #CCCCCC;
   margin-top: 40rpx;
 }
 .scanCode{
