--- a/pages/Vichy/newExchange/newExchange.wxml
+++ b/pages/Vichy/newExchange/newExchange.wxml
@@ -21,14 +21,14 @@
       </view>
       <view class="invitedTip_item">邀请<text class="rewardNum">146</text>个好友       <text class="reward_cont">获66份(约8瓶正装)</text>
       </view>
-      <view class="pasteKey" bindtap="clickPasteKey">20元薇姿旗舰店专属券点击复制口令 ¥MAAbYqpxj8o¥打开淘宝领取</view>
+      <view class="pasteKey" bindtap="clickPasteKey">薇姿旗舰店双十一优惠券抢先领，点击复制口令￥ULHdYKpulkm￥打开淘宝领取</view>
    </view>
 </view>
 
 <view class="invitedBtn btn" bindtap="invitationFriend">邀请好友</view>
 <view class="exchangeBtn btn" bindtap="checkReward">兑换奖品</view>
 
-<view class="activeRule" bindtap="jumpExchangeRule">活动&邀请规则</view>
+<view class="activeRule" bindtap="jumpExchangeRule">活动&兑换规则</view>
 
 <view class="jjLogoBox">
    <text class="line"></text>
@@ -45,12 +45,12 @@
     <view class='shareCont'>
        <view class='savePost' bindtap='savePostLocation'>
          <image class='savePostLogo' src="../../../images/vichy/pengyouquan.png"></image>
-         <view class='share_Title'>分享到朋友圈</view>
+         <view class='share_Title'>分享朋友圈</view>
        </view>
        <view class='shareFriend'>
          <button class='shareFriendBtn' open-type="share"></button>
          <text class='weixinLogo iconfenzucopy iconfont'></text>
-         <view class='share_Title'>发送好友</view>
+         <view class='share_Title'>发送给好友</view>
        </view>
     </view>
 </van-popup>
@@ -61,7 +61,7 @@
            custom-style='margin-top:-50rpx'>
     <view class='PostImgBox' catchtouchmove="catchtouchmove">
       <view class='poste_box' id='canvas-container' style='width:100%;height:100%;'>
-        <canvas canvas-id="myCanvas" style="width:100%;height:100%; display:{{invitationPost ? 'block' : 'none'}}" />
+        <canvas canvas-id="myCanvas" style="width:100%;height:100%; background: #000;display:{{invitationPost ? 'block' : 'none'}}" />
       </view>
     </view>
 </van-popup>
@@ -69,7 +69,8 @@
 <van-popup show="{{ checkRewardBl }}" 
            custom-class='checkReward'
            bind:click-overlay='onClose' >
-     <view class="checkReward_title">请在可兑换日期 前往指定门店进行兑换</view>
+     <view class="checkReward_title">当前可兑换 {{giftReceiveInfo.reserve_count || "1"}} 份薇姿礼包
+</view>
      <view class="checkRewardBox">
         <view class="exchange_tip">
             <text class="exchangeIconTop">
@@ -89,7 +90,13 @@
             </text>
             <text bindtap="getLocationMap">{{giftReceiveInfo.store_address}}</text>
         </view>
+
+        <!-- <view class="exchange_tipCareful">
+            <text class="iconfont iconicon-test5 tipCarefulIcon"></text>
+            请在可兑换日期前往指定门店进行兑换
+        </view> -->
      </view>
+
      <view class="sureBtn" bindtap="sureCheckStore">确认</view>
 </van-popup>
 
