--- a/pages/noFind/noFind.wxml
+++ b/pages/noFind/noFind.wxml
@@ -4,4 +4,4 @@
    <view class='serverCont'>{{serverCont}}</view>
 </view>
 
-<view class='backHome' bindtap='backHome'>返回首页</view>
+<!-- <view class='backHome' bindtap='backHome'>返回首页</view> -->
