--- a/pages/Vichy/exchangeCode/exchangeCode.wxss
+++ b/pages/Vichy/exchangeCode/exchangeCode.wxss
@@ -24,6 +24,20 @@ page{
   border-radius: 50%;
   margin-top: -64rpx;
 }
+/* .headImgBlur{
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  border-radius: 50%;
+  z-index: -1;
+  width: 128rpx;
+  height: 128rpx;
+  filter: blur(10rpx) brightness(80%) opacity(.8);
+  content: "";
+  transform: scale(.95);
+} */
 .currentInvitation{
   font-size:42rpx;
   font-family:PingFangSC-Light,PingFangSC;
